--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Ramya's Personal Site</title>
+    <title>Aymar's Personal Site</title>
     <meta charset="utf-8">
 </head>
 <body>
@@ -10,7 +10,7 @@
             <tr>
                 <td><img src="ramya.jpg" width="100" alt="ramya"></td>
                 <td>
-                    <h1>Ramya ranjan Rath</h1>
+                    <h1>Aymar Htar</h1>
                     <p> Perpetual Learner</p>
                 </td>
             </tr>
@@ -45,7 +45,7 @@
         <strong><a href="https://lipunsays.wordpress.com/" target="_blank">Here you can see my blogs</a></strong>
     </p>
     <p>
-        <strong><a href="C:\Users\ramya\Desktop\Full stack web developement course\HTML201 PROJECT.html" target="_blank">This is a website I created in a previous course</a></strong>
+        <strong><a href="HTML201 PROJECT.html" target="_blank">This is a website I created in a previous course</a></strong>
     </p>
     <p>
         <strong><a href="Linked page.html" target="_blank"><strong>Contact Me!!</strong></a></strong>
