--- a/HTML201 PROJECT.html
+++ b/HTML201 PROJECT.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
     <title>HTML 201 PROJECT</title>
-    <link rel="icon" href="Images\favicons.png" type="image/icon">
+    <link rel="icon" href="favicons.png" type="image/icon">
 </head>
 <body>
     <table border="0px" width="100%">
-        <tr><th colspan="9"><h1>Ramya's HTML 201 project</h1></th></tr>
+        <tr><th colspan="9"><h1>Aymar's HTML 201 project</h1></th></tr>
         <tr>
             <td width="60%"><b> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis autem voluptatem laudantium fugit ad placeat, numquam libero nostrum! Cum eligendi perferendis provident id, sunt quam obcaecati? Animi ullam doloremque iure!</b></td>
             <th>
@@ -14,11 +14,11 @@
         </tr>
         <tr>
             <td><a href="https://en.wikipedia.org/wiki/Giant_panda">If you want to know something about giant panda. You should definitely click here!</a></td>
-            <th><img src="Images/test.jpg" alt="computer" width="560" height="315"></th>
+            <th><img src="test.jpg" alt="computer" width="560" height="315"></th>
         </tr>
         <tr>
             <th colspan="2">
-                <h2>&copy;2022 Ramya ranjan Rath</h2>
+                <h2>&copy;2022 Aymar Htar</h2>
             </th>
         </tr>
 
