--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Aymar's Personal Site</title>
     <meta charset="utf-8">
 </head>
-<body>
+<body style="background-color:#d8f6f6; color:black;>
     <hr size="5" noshade color="black">
         <table cellspacing="20">
             <tr>
