--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           <h2>My Skills.</h2>
           <div class="skill-row">
             <img class="body-images1" src="Images/skills.jpeg"  alt="skills">
-            <h3>Physics educator</h3>
-            <p class="text-content">I have learned enough physics that I can teach others!</p>
+            <h3>Music Enthusiast</h3>
+            <p class="text-content">From Indian classics to American hip-hop, I like all kind of music. I love music and learning a music instrument is in my bucket.</p>
           </div>
           <div class="skill-row">
             <img class="body-images2" src="Images/skills2.jpeg" alt="skills2">
@@ -58,9 +58,9 @@
       
       
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.youtube.com/channel/UCjryRrKCAe9bUppR9WA_yLg">Youtube</a>
-      <a class="footer-link" href="https://twitter.com/explainous">Twitter</a>
-      <a class="footer-link" href="https://www.facebook.com/explainous">Facebook</a>
+      <a class="footer-link" href="">Youtube</a>
+      <a class="footer-link" href="">Twitter</a>
+      <a class="footer-link" href="">Facebook</a>
       <p class="contact">©2022 Aymar Htar.</p>
     </div>
 
