--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="skill-row">
             <img class="body-images1" src="Images/skills.jpeg"  alt="skills">
             <h3>Music Enthusiast</h3>
-            <p class="text-content">From Indian classics to American hip-hop, I like all kind of music. I love music and learning a music instrument is in my bucket.</p>
+            <p class="text-content">From Indian classics to American hip-hop, I listen to all kind of music. I love music and learning a musical instrument is in my bucket.</p>
           </div>
           <div class="skill-row">
             <img class="body-images2" src="Images/skills2.jpeg" alt="skills2">
